# speakeazy

./: .gitignore  1_emcee_run.h5  README.md  noxfile.py  pyproject.toml  setup.cfg
code/: data.py  fitting.py  main.py  models.py  plotting.py  priors.py  tests.ipynb
noname/: __init__.py  fitting.py  models.py  plotting.py  priors.py  sampling.py  setup.py  tests.ipynb
noname/noname.egg-info/: PKG-INFO  SOURCES.txt
speakeazy/: __init__.py  data.py  fitting.py  model_spectra.py  models.py  plotting.py  priors.py  sampling.py  test.txt
speakeazy/data/: bb1.spec.fits
speakeazy/notebooks/: 1_emcee_run.h5  Example_Simple_Fit.ipynb  tests.ipynb
speakeazy/tests/: test_fitting.py  test_sampling.py
src/noname/: data.py  fitting.py  plotting.py  priors.py
src/speakeazy/: main_old.py  models.py  tests.ipynb
test_data/: macs0417.1208_340.v0.spec.fits
