[tool:pytest]
testpaths = "speakeazy/tests"

[metadata]
package_name = speakeazy
description = Spectrum Analysis Kit Done Eazy
author = K. Gould
license = MIT
license_files = LICENSE.txt
url = https://github.com/kmlgould/speakeazy
edit_on_github = False
github_project = kmlgould/speakeazy
long_description = file: README.md
long_description_content_type = text/x-rst
project_urls =
    Source = https://github.com/kmlgould/speakeazy
    Tracker = https://github.com/kmlgould/speakeazy/issues
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy

[options]
python_requires = >=3.9
packages = 
    speakeazy
    speakeazy/data
install_requires = 
    numpy
    cython
    matplotlib
    scipy
    tqdm
    astropy
    pysiaf
    jwst
    astroquery
    grizli
    eazy>=0.6.7
    mastquery
    astro-sedpy>=0.3.0
    scikit-image
    msaexp>=0.6.18
include_package_data = True

[options.extras_require]
test =
    pytest>=5.1
    flake8
docs =
    sphinx
    sphinx-astropy

[options.package_data]
speakeazy.data = 
    *